Added search for skills.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/searchApp.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/controllers/searchController.js"></script>
+    <script type="text/javascript" src="js/controllers/skillsController.js"></script>
     <script type="text/javascript" src="js/controllers/NavController.js"></script>
 </head>
 <body ng-app="searchApp">
